# transliterate

./: LICENSE  README.md
src/Transliteration/: ISO15919toTamil.py  transliteration.py
src/transliterate_iso15919.egg-info/: PKG-INFO  SOURCES.txt
transliterate/: setup.cfg
