[metadata]
name = iso15919_transliterate
version = 0.0.1
author = "Aswin Venkat"
author_email = "aswinvenk8@gmail.com"
description = "A package to transliterate indian text based on ISO 15919"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aswinvenk/transliterate
keywords = tamil,hindi,transliterate,indian,language

project_urls = 
    Bug Tracker = https://github.com/aswinvenk/transliterate/issues

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[option.packages.find]
where = src